mysql/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector: 
    app: mysql
  type: NodePort
  ports:
    - port: 9000
      targetPort: 3306
