mysql/ingress-adminer.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress-adminer
  annotations:
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: adminer.vishal-chauhan.in
    http:
      paths:
      - backend:
          service:
            name: adminer-service
            port:
              number: 5000
        path: /
        pathType: Prefix
### Kindly NOTE the port used in ingress is the port NOT target Port
